@@ -81,9 +81,12 @@ Information about older versions may be found <a href="http://pwsafe.org/history
 <table>
 <tbody align="left" valign="top">
 <tr>
-<td align="center" width="100"><a href="nojs.html" onclick="FR(3062758);return false;">3062758</a></td>
-<td>Groups list in Add/Edit dialog box no longer "remembers"
-groups from previously opened database.</td>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3084401);return false;">3084401</a></td>
+<td>When database is locked, clipboard is cleared and the hotkey works.</td>
+</tr>
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3062769);return false;">3062769</a></td>
+<td>Groups list in Add/Edit dialog box no longer "remembers" groups from previously opened database.</td>
 </tr>
 <tr>
 <td align="center" width="100">n/a</td>
