@@ -16,7 +16,8 @@ New Features for 3.23.1
 
 Bugs fixed in 3.23.1
 ====================
-[3062758] Groups list in Add/Edit dialog box no longer "remembers"
+[3084401] When database is locked, clipboard is cleared and the hotkey works.
+[3062769] Groups list in Add/Edit dialog box no longer "remembers"
 groups from previously opened database.
 [] Spanish translations for installer and application updated - thanks
 to Jose.
